[package]
authors = ["Bence Kalmar <bkalmar1996@gmail.com>"]
description = "Generate `parse_wiki_text` configuration code for a MediaWiki wiki"
edition = "2018"
license = "MIT"
name = "fetch_mediawiki_configuration"
repository = "https://github.com/brkalmar/fetch_mediawiki_configuration"
version = "0.1.1"

[dependencies.clap]
default-features = false
version = "~2.33.3"

[dependencies.err-derive]
version = "*"

[dependencies.itertools]
version = "*"

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "*"

[dependencies.quote]
version = "*"

[dependencies.regex-syntax]
default-features = false
version = "0.6"

[dependencies.reqwest]
features = ["blocking", "deflate", "gzip", "json"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.serde_json]
features = ["raw_value"]
version = "*"

[dependencies.simplelog]
version = "*"

[dependencies.url]
version = "2"
